<?xml version="1.0"?>
<package>
  <name>reconstruction_tools</name>
  <version>0.2.0</version>
  <description>Package providing tools the dense_reconstruction package.</description>

  <maintainer email="islerstefan@bluewin.ch">Stefan Isler</maintainer>


  <license>LGPLv3</license>

  <author email="islerstefan@bluewin.ch">Stefan Isler</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ros_tools_cpp03</build_depend>
  
  <run_depend>rosbag</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ros_tools_cpp03</run_depend>

</package>